--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -219,7 +219,6 @@
    .offer-card div:first-child {
     display: flex;
     align-items: center;
-    padding: 8px;
   }
   .offer-card img {
     object-fit: cover;
@@ -241,24 +240,31 @@
   /* Img - offers */
    .product-card {
     width: 100%;
-    height: 450px;
+    height: 340px;
     object-fit: contain;
   }
    
   /* Details - offers */
    .offer-card div:last-child {
-    padding: 10px;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 3px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding-top: 1vh;
   }
+
   .offer-card div:last-child p:first-child {
     font-weight: 600;
   }
   .offer-card div:last-child p:not(:first-child) {
     font-size: 12px;
-    color: var(--dark-grey);
   }
   
+  .priceProduct {
+    color: #007782a8;
+  }
+
+  .descriptionProduct {
+    color: #757575;
+  }
