--- a/client/src/pages/LoginPage/LoginPage.css
+++ b/client/src/pages/LoginPage/LoginPage.css
@@ -4,18 +4,26 @@
   min-height: 89vh;
 }
 
-.loginForm {
+.loginFormDiv {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   height: 540px;
   width: 500px;
   border-radius: 10px;
   margin: 40px;
-  padding: 30px 0 20px;
   box-shadow: 0px 106px 42px rgba(0, 0, 0, 0.01), 0px 59px 36px rgba(0, 0, 0, 0.05), 0px 26px 26px rgba(0, 0, 0, 0.09), 0px 7px 15px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
   background-color: white;
+}
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 70%;
+  width: 100%;
+  padding-top: 30px;
 }
 
 .loginFormTopText {
@@ -83,12 +91,11 @@
 }
 
 .googleLoginButton {
-  height: 40px;
-  width: 80%;
-
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 40px;
+  width: 80%;
   gap: 10px;
   background: #ffffff;
   border-radius: 7px;
@@ -98,6 +105,7 @@
   filter: drop-shadow(0px 1px 0px #efefef)
     drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
   cursor: pointer;
+  margin-bottom: 25px;
 }
 
 .googleLogo {
@@ -110,4 +118,29 @@
 
 .signUpLink {
   color: black;
+}
+
+.separator {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  color: #8B8E98;
+}
+
+.separator .line {
+  display: block;
+  width: 100%;
+  height: 1px;
+  border: 0;
+  background-color: #e8e8e8;
+}
+
+.afterLoginForm {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
