--- a/client/src/pages/ProfilePage/ProfilePage.css
+++ b/client/src/pages/ProfilePage/ProfilePage.css
@@ -44,18 +44,20 @@
     margin: 10px;
 }
 
-.userButtonsDiv {
+.userButtonsDivWrapper {
     display: flex;
     flex-direction: column;
     padding: 10px;
 }
 
-.editProfileButtonDiv {
+.userButtonsDiv {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .followButtonDiv {
-    flex: 1;
     display: flex;
     align-items: flex-end;
 }
