--- a/client/src/components/ChatBox/ChatBox.css
+++ b/client/src/components/ChatBox/ChatBox.css
@@ -2,7 +2,7 @@
     height: 90%;
     width: 100%;
     padding-top: 10px;
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 .messageInputDiv {
@@ -45,8 +45,9 @@
 
 .messageText {
     margin: 0;
-    padding: 5px 20px;
-    border-radius: 50px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    overflow-wrap: break-word;
 }
 
 .messageTime {
