--- a/client/src/pages/Chat/Chat.css
+++ b/client/src/pages/Chat/Chat.css
@@ -25,8 +25,40 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     border-right: 1px solid #c2634b;
+}
+
+.sideBarChatDiv {
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    cursor: pointer;
+    border-top: 1px solid grey;
+}
+
+.sideBarChatDiv:first-child {
+    border: none !important;
+}
+
+.sideBarChatDiv > p {
+    margin: 0;
+}
+
+.sideBarChatDiv > img {
+    height: 80%;
+    border-radius: 50%;
+    margin: 15px;
+}
+
+.sideBarChatDiv:hover {
+    background-color: #f7f7f7;
+}
+
+.loadingAnimation {
+    align-self: center;
 }
 
 .mainChatDiv {
