Refactor and fix some condionnal statement

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,17 +5,7 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
+/* 
 .joinChatContainer {
   display: flex;
   flex-direction: column;
@@ -191,4 +181,5 @@
 }
 .hide {
   opacity: 0 !important;
-}
+} */
+
