--- a/client/src/components/StickyButton/StickyButton.css
+++ b/client/src/components/StickyButton/StickyButton.css
@@ -1,4 +1,15 @@
-#stickyButton {
+#stickyButtonLogIn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    opacity: 1;
+    border: none;
+    background-color: #1ab3c1;
+    color: white;
+    padding: 18px 32px;
+
+  }
+#stickyButtonLogOut {
     position: fixed;
     bottom: 20px;
     right: 20px;
