--- a/client/src/components/SearchPreview/SearchPreview.css
+++ b/client/src/components/SearchPreview/SearchPreview.css
@@ -1,7 +1,7 @@
 .searchPreviewDiv {
     z-index: 5;
     border-radius: 0 0 3px 3px;
-    background-color: #E0E0E0;
+    background-color: #ffffff;
 }
 
 .previewLink {
