--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -3,30 +3,42 @@
 }
   
 .background-image {
-  height: 450px;
-  background-image: url("https://myvinted-lereacteur-2021.netlify.app/static/media/hero-banner.bebb87dd.jpg");
+  height: 700px;
+  background-image: url("https://static.vinted.com/assets/seller-promotion/other/banner-wide-9b45d0aa9a311c4ff6013e9cf3bc2b6646468be3d2f553192c63598685fcc177.jpg");
   background-repeat: no-repeat;
-  background-position: center 20%;
+  background-position: center 50%;
   background-size: cover;
 }
 
 .overlay {
   position: absolute;
-  top: 110px;
-  left: 109px;
-  width: 280px;
-  height: 200px;
-  background-color: rgb(255 255 255);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 4px solid #007782;
+    top: 295px;
+    left: 214px;
+    width: 371px;
+    height: 250px;
+    background-color: rgb(255 255 255);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .text {
   color: rgb(0, 0, 0);
-  font-size: 22px;
+  font-size: 31px;
   font-weight: 500;
+  display: flex;
+  flex-direction: column;
+}
+
+.buttonOverlay {
+  border: none;
+  margin-top: 15px;
+  padding: 7px 25px;
+  background-color: #27cedd;
+}
+.buttonOverlay span {
+  color: #FFF;
+  font-size: 25px;
 }
 
 .secondSection {
@@ -58,3 +70,6 @@
 }
 
 
+.stickyButton2 {
+  background-color: red;
+}
