--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -21,7 +21,7 @@
 
   
   .logoImage {
-    max-width: 30%;
+    max-width: 20%;
   }
 
 .searchDiv {
@@ -32,10 +32,16 @@
     height: 100%;
 }
 
+.logoLink {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 2vh;
+}
+
 .searchDivWrapper {
     position: relative;
     display: flex;
-    height: 65%;
+    height: 55%;
     width: 95%;
 }
 
@@ -59,6 +65,7 @@
     margin: 0;
     margin-right: 10px;
     font-size: 15px;
+    color: #757575;
 }
 
 .navSelectionArrow {
@@ -79,10 +86,14 @@
     align-items: center;
     height: 50%;
     padding: 0 10px;
-    border: 1px solid rgb(239, 209, 170);
     background-color: white;
     font-size: 12px;
 
+}
+
+.sellNowButtonn {
+    display: flex;
+    text-decoration: none;
 }
 
 .navOption > p {
@@ -154,13 +165,14 @@
 .buttonsDiv {
     display: flex;
     align-items: center;
-    height: 100%;
+    height: 70%;
     width: 35%;
     font-size: 16px;
 }
 
 .buttonsDiv > a {
     height: 65%;
+    margin: 1vh;
 }
 
 
@@ -262,8 +274,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    padding: 5px 25px;
+    height: 55%;
     border-radius: 5px;
     background-color: white;
 }
