--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -28,6 +28,7 @@
   font-weight: 500;
   display: flex;
   flex-direction: column;
+  font-family: "roboto";
 }
 
 .buttonOverlay {
@@ -50,9 +51,9 @@
 .latestProductsText {
   text-align: left;
   margin-top: 1vh;
-  margin-left: 8vh;
   font-weight: 300;
-  font-size: 3vh;
+  font-size: 2vh;
+  margin-left: 4vh;
 }
 
 .small-hr {
