--- a/client/src/pages/ProductDetailPage/ProductDetailPage.css
+++ b/client/src/pages/ProductDetailPage/ProductDetailPage.css
@@ -54,3 +54,7 @@
       width: 50%;
   }
 }
+
+.DetailSidebar.showOfferPopup {
+  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity to make it darker or lighter */
+}
