--- a/client/src/pages/AddProduct/AddProduct.css
+++ b/client/src/pages/AddProduct/AddProduct.css
@@ -82,3 +82,9 @@
         width: 50%;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .addProductForm {
+        width: 100%;
+    }
+}
