--- a/client/src/components/UnderNavbar/UnderNavbar.css
+++ b/client/src/components/UnderNavbar/UnderNavbar.css
@@ -7,7 +7,9 @@
 .text-underNavbar {
   display: flex;
   justify-content: flex-start;
-  padding: 0 15px;
+  align-items: center;
+  height: 100%;
+  margin-left: 18%;
 }
 
 .text-underNavbar p {
@@ -22,7 +24,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .text-underNavbar {
-    justify-content: space-between;
+  .underNavbar {
+    display: none;
   }
 }
