--- a/client/src/pages/Chat/Chat.css
+++ b/client/src/pages/Chat/Chat.css
@@ -35,7 +35,8 @@
     justify-content: flex-start;
     align-items: center;
     cursor: pointer;
-    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+    overflow: hidden;
 }
 
 .sideBarChatDiv:first-child {
