--- a/client/src/components/ChatBox/ChatBox.css
+++ b/client/src/components/ChatBox/ChatBox.css
@@ -1,5 +1,25 @@
+.chatHeaderDiv {
+    display: flex;
+    align-items: center;
+    height: 7%;
+    width: 100%;
+    border-bottom: 1px solid grey;
+}
+
+.chatHeaderText {
+    flex: 1;
+    margin: 0;
+}
+
+.deleteChatIcon {
+    align-self: flex-end;
+    height: 100%;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
 .messagesDiv {
-    height: 90%;
+    height: 83%;
     width: 100%;
     padding-top: 10px;
     overflow: auto;
