--- a/client/src/components/Carousel/Carousel.css
+++ b/client/src/components/Carousel/Carousel.css
@@ -41,29 +41,29 @@
 }
 
 .carouselLeft {
-    background-color: rgba(211, 211, 211, 1);
     position: absolute;
     z-index: 5;
     height: 25%;
     width: 10%;
     top: 37.5%;
     left: 0%;
-    border: 1px solid #C2634B;
+    border: none;
     border-left: 0;
     border-radius: 0 10px 10px 0;
+    background-color: transparent;
 }
 
 .carouselRight {
-    background-color: rgba(211, 211, 211, 1);
     position: absolute;
     z-index: 5;
     height: 25%;
     width: 10%;
     top: 37.5%;
-    left: 90%;
-    border: 1px solid #C2634B;
+    left: 89.5%;
+    border: none;
     border-right: 0;
     border-radius: 10px 0 0 10px;
+    background-color: transparent;
 }
 
 .carouselLeft > svg {
