--- a/client/src/components/LatestProducts/LatestProducts.css
+++ b/client/src/components/LatestProducts/LatestProducts.css
@@ -1,30 +1,5 @@
-.wrapper {
-    margin: 0 auto;
-    width: 70vw;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 27px;
-}
-
-main a {
-    text-decoration: none;
-    color: black;
-}
-
-.buttonSeeMore {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 16%; /* Increase the width to make it wider */
-}
-.buttonSeeMore button{
-    height: 35vh;
-    border: none;
-    color: #999999;
-}
-
-@media only screen and (min-width: 1920px) {
-    .latestProductsDiv {
-        width: 83%;
-    }
+.latestProductsDiv {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 10px;
 }
