--- a/client/src/components/ProductsTab/ProductsTab.css
+++ b/client/src/components/ProductsTab/ProductsTab.css
@@ -1,6 +1,7 @@
 .productsTabDiv {
     display: grid;
-    grid-template-columns: repeat(3, 1fr)
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 10px;
 }
 
 .noProductsDiv {
@@ -18,13 +19,4 @@
 
 .noProductsDiv > p {
     font-size: 1.5rem;
-}
-
-
-.wrapper {
-    margin: 0 auto;
-    width: 70vw;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 27px;
 }
