--- a/client/src/components/ProfilePictureInput/ProfilePictureInput.css
+++ b/client/src/components/ProfilePictureInput/ProfilePictureInput.css
@@ -7,7 +7,6 @@
 .profilePictureCanvas {
     height: 100%;
     width: 100%;
-    border: 1px solid black;
     border-radius: 100%;
     pointer-events: none;
 }
@@ -47,11 +46,11 @@
     }
 }
 
-.rotate {
-    animation: rotate 2s cubic-bezier(0.645, 0.045, 0.355, 1);
+.rotatePFP {
+    animation: rotatePFP 2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
   
-@keyframes rotate {
+@keyframes rotatePFP {
     from {
         transform: rotate(0deg);
     }
