--- a/client/src/pages/EditProfilePage/EditProfilePage.css
+++ b/client/src/pages/EditProfilePage/EditProfilePage.css
@@ -5,6 +5,7 @@
 }
   
 .editProfilePageWrapper {
+    display: flex;
     width: 80%;
     margin: 20px;
 }
@@ -19,42 +20,42 @@
     background-color: white;
 }
   
-.changeUserInfoDiv {
+.changePasswordDiv {
     flex: 1;
+    height: 320px;
+}
+
+.changePasswordForm {
+    height: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.changePasswordForm > div {
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
     padding: 20px;
+    background-color: white;
 }
-  
- /*     */
-  
-.form-control:focus {
-    box-shadow: none;
-    border-color: #BA68C8;
-}
-  
-.profile-button {
-    background: #BA68C8;
-    box-shadow: none;
+
+.changePasswordForm input {
+    font-family: "Open Sans",sans-serif;
+    width: 50%;
+    font-size: 14px;
     border: none;
+    border-bottom: 1.8px solid #f5f6f7;
 }
-  
-.profile-button:hover {
-    background: #682773;
+
+.changePasswordButton {
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
 }
-  
-.profile-button:focus {
-    background: #682773;
-    box-shadow: none;
-}
-  
-.profile-button:active {
-    background: #682773;
-    box-shadow: none;
-}
-  
-.back:hover {
-    color: #682773;
-    cursor: pointer;
-}
+
+.success-message {
+    color: rgb(16, 83, 16);
+} 
