--- a/client/src/components/LatestProducts/LatestProducts.css
+++ b/client/src/components/LatestProducts/LatestProducts.css
@@ -3,3 +3,12 @@
     grid-template-columns: repeat(4, 1fr);
     padding: 10px;
 }
+
+@media only screen and (max-width: 768px) {
+    .latestProductsDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+}
