--- a/client/src/components/LatestProducts/LatestProducts.css
+++ b/client/src/components/LatestProducts/LatestProducts.css
@@ -4,6 +4,13 @@
     padding: 10px;
 }
 
+.wardrobeText {
+    font-size: 22px;
+    font-weight: 300;
+    margin: 20px 20px 0;
+    text-align: left;
+}
+
 @media only screen and (max-width: 768px) {
     .latestProductsDiv {
         display: flex;
