--- a/client/src/components/SearchPreview/SearchPreview.css
+++ b/client/src/components/SearchPreview/SearchPreview.css
@@ -1,6 +1,7 @@
 .searchPreviewDiv {
     position: absolute;
     top: 100%;
+    width: 100%;
     z-index: 5;
     border-radius: 0 0 3px 3px;
     background-color: #ffffff;
