With Brea, work on the responsive design of the website

--- a/client/src/components/LatestProducts/LatestProducts.css
+++ b/client/src/components/LatestProducts/LatestProducts.css
@@ -19,3 +19,11 @@
         gap: 10px;
     }
 }
+
+@media only screen and (max-width: 992px) {
+    .latestProductsDiv {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 10px;
+    }
+}
