--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -1,5 +1,6 @@
 .productCardDiv {
-  width: 300px;
+  height: 500px;
+  width: 250px;
 }
 
 .productCardLink {
@@ -9,28 +10,36 @@
 .productCardHeader {
   display: flex;
   align-items: center;
+  height: 60px;
   margin: 5px;
 }
 
 .productCardHeaderUsername {
   margin: 0;
   color: #343a40;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 .productCardHeaderPFP {
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
   margin-right: 10px;
-} 
+}
 
 .productCardImageDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 300px;
+  width: 250px;
+  overflow: hidden;
 }
 
 .productCardImage {
   height: 100%;
+  width: auto;
+  object-fit: cover;
 }
 
 .productCardInfoDiv {
