Minor styling changes to some pages + responsiveness

--- a/client/src/components/ProductCard/ProductCard.css
+++ b/client/src/components/ProductCard/ProductCard.css
@@ -1,6 +1,7 @@
 .productCardDiv {
   height: 500px;
   width: 250px;
+  padding: 5px;
 }
 
 .productCardLink {
@@ -32,7 +33,7 @@
   justify-content: center;
   align-items: center;
   height: 300px;
-  width: 250px;
+  width: 240px;
   overflow: hidden;
 }
 
