--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -52,7 +52,6 @@
 
 
 .buttonOverlay {
-  border: 1px solid black;
   width: 80%;
   border: none;
   margin-top: 15px;
@@ -64,12 +63,14 @@
 
 .secondSectionHeader {
   display: flex;
+  justify-content: flex-start;
   align-items: center;
+  width: 100%;
   padding: 20px;
 }
 
 .latestProductsText {
-  font-size: 22px;
+  font-size: 30px;
   font-weight: 300;
   margin: 0;
   margin-right: 20px;
