--- a/client/src/pages/MenProducts/MenProducts.css
+++ b/client/src/pages/MenProducts/MenProducts.css
@@ -1,13 +1,32 @@
-
-.wrapper {
-    margin: 0 auto;
-    width: 70vw;
+.menProductsPageDiv {
     display: flex;
-    flex-wrap: wrap;
-    gap: 27px;
+    justify-content: center;
+    min-height: 91vh;
 }
 
-main a {
-    text-decoration: none;
-    color: black;
+.menProductsWrapper {
+    width: 80%;
+    margin: 20px;
+}
+
+.menProductsDiv {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 20px;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .menProductsDiv {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+@media only screen and (min-width: 1920px) {
+    .menProductsWrapper {
+        width: 50%;
+    }
 }
